tests/snapshots/files__unroll_and_constant_fold-rvsdg.snap
---
source: tests/files.rs
expression: visualization.result
---
<svg
	height="850"
	version="1.1"
	width="1100"
	xmlns="http://www.w3.org/2000/svg">
	<g
		transform="translate(0, 0)">
		<rect
			fill="white"
			height="850"
			rx="10"
			stroke="black"
			stroke-width="2"
			width="1100">
		</rect>
		<g>
			<path
				d="M 550 0V 15Q 550 25 560 25H 585Q 595 25 595 35V 200"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 100 150V 172.5Q 100 182.5 110 182.5H 655Q 665 182.5 665 192.5V 200"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 250 150V 165Q 250 175 260 175H 795Q 805 175 805 185V 200"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 400 150V 157.5Q 400 167.5 410 167.5H 725Q 735 167.5 735 177.5V 200"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 641.6666 650V 656Q 641.6666 666 651.6666 666H 1006.6667Q 1016.6667 666 1016.6667 676V 700"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 700 650V 662Q 700 672 710 672H 973.3333Q 983.3333 672 983.3333 682V 700"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 983.3333 800V 815Q 983.3333 825 973.3333 825H 560Q 550 825 550 835V 850"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
		</g>
		<g>
			<g
				transform="translate(50, 50)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						0
					</text>
				</g>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(200, 50)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						1
					</text>
				</g>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(350, 50)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						3
					</text>
				</g>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(500, 200)">
				<rect
					fill="#FF8080"
					height="450"
					rx="10"
					stroke="black"
					stroke-width="2"
					width="400">
				</rect>
				<text
					fill="black"
					font-size="50"
					x="25"
					y="50">
					loop
				</text>
				<g
					transform="translate(25, 75)">
					<rect
						fill="white"
						height="350"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="350">
					</rect>
					<g>
						<path
							d="M 70 0V 310Q 70 320 80 320H 106.666664Q 116.666664 320 116.666664 330V 350"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 140 0V 12Q 140 22 130 22H 93.33333Q 83.33333 22 83.33333 32V 50"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 210 0V 320Q 210 330 220 330H 223.33333Q 233.33333 330 233.33333 340V 350"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 210 0V 18Q 210 28 220 28H 256.66666Q 266.66666 28 266.66666 38V 200"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 280 0V 325Q 280 335 285.8333 335H 285.8333Q 291.66666 335 291.66666 345V 350"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 280 0V 24Q 280 34 270 34H 126.666664Q 116.666664 34 116.666664 44V 50"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 100 150V 315Q 100 325 110 325H 165Q 175 325 175 335V 350"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 100 150V 165Q 100 175 110 175H 223.33333Q 233.33333 175 233.33333 185V 200"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 250 300V 305Q 250 315 240 315H 68.33333Q 58.333332 315 58.333332 325V 350"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
					</g>
					<g>
						<g
							transform="translate(50, 50)">
							<g>
								<rect
									fill="#FFFF80"
									height="100"
									rx="10"
									stroke="black"
									stroke-width="2"
									width="100">
								</rect>
								<text
									fill="black"
									font-size="50"
									text-anchor="middle"
									x="50"
									y="62.5">
									add
								</text>
							</g>
							<circle
								cx="33.333332"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="66.666664"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="50"
								cy="100"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g
							transform="translate(200, 200)">
							<g>
								<rect
									fill="#FFFF80"
									height="100"
									rx="10"
									stroke="black"
									stroke-width="2"
									width="100">
								</rect>
								<text
									fill="black"
									font-size="50"
									text-anchor="middle"
									x="50"
									y="62.5">
									lt
								</text>
							</g>
							<circle
								cx="33.333332"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="66.666664"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="50"
								cy="100"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
					</g>
					<g>
						<circle
							cx="70"
							cy="0"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="140"
							cy="0"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="210"
							cy="0"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="280"
							cy="0"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
					</g>
					<g>
						<circle
							cx="58.333332"
							cy="350"
							fill="black"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="116.666664"
							cy="350"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="175"
							cy="350"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="233.33333"
							cy="350"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="291.66666"
							cy="350"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
					</g>
				</g>
				<circle
					cx="95"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="165"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="235"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="305"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="141.66666"
					cy="450"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="200"
					cy="450"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="258.3333"
					cy="450"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="316.66666"
					cy="450"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(950, 700)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						PRINT
					</text>
				</g>
				<circle
					cx="33.333332"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="66.666664"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="33.333332"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="66.666664"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
		</g>
		<g>
			<circle
				cx="550"
				cy="0"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
		<g>
			<circle
				cx="550"
				cy="850"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
	</g>
</svg>

