tests/snapshots/files__unroll_and_constant_fold-structured.snap
---
source: tests/files.rs
expression: visualization.result
---
main {
block:
 i: int = const 0;
 one: int = const 1;
 three: int = const 3;
while true:
 block:
  i: int = add i one;
  cond: bool = lt i three;
  if cond:
   break 2
  else:
   break 1
 block:
  print i;
  return

}
