tests/snapshots/files__unroll_multiple_4-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
.b0_:
  c1_: int = const 0;
  c2_: int = const 16;
  c3_: int = const 1;
  v4_: int = id c1_;
  v5_: int = id c2_;
  v6_: int = id c3_;
.b7_:
  v8_: int = add v4_ v6_;
  v9_: bool = lt v8_ v5_;
  v4_: int = id v8_;
  v5_: int = id v5_;
  v6_: int = id v6_;
  br v9_ .b7_ .b10_;
.b10_:
  print v4_;
  ret;
}
