tests/snapshots/files__unroll_multiple_4-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
  c0_: int = const 0;
  c1_: int = const 16;
  c2_: int = const 1;
  v3_: int = id c0_;
  v4_: int = id c1_;
  v5_: int = id c2_;
.b6_:
  c7_: int = const 4;
  v8_: int = add c7_ v3_;
  v9_: bool = lt v8_ v4_;
  v3_: int = id v8_;
  v4_: int = id v4_;
  v5_: int = id v5_;
  br v9_ .b6_ .b10_;
.b10_:
  print v3_;
  ret;
}
