tests/snapshots/files__unstructured-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: int) {
  v3: bool = const false;
  v5: int = const 4;
  v7: int = const 1;
  v9: bool = id v3;
  v10: int = id v5;
  v11: int = id v7;
.__13__:
  br v9 .__30__ .__19__;
.__30__:
  v32: bool = lt v10 v11;
  br v32 .__50__ .__39__;
.__50__:
  v51: bool = const true;
  v53: bool = const false;
  v45: bool = id v51;
  v46: bool = id v53;
  v47: int = id v10;
  v48: int = id v11;
.__58__:
  v25: bool = id v32;
  v26: bool = id v46;
  v27: int = id v10;
  v28: int = id v11;
.__64__:
  v9: bool = id v26;
  v10: int = id v10;
  v11: int = id v11;
  br v25 .__13__ .__71__;
.__39__:
  v40: bool = const false;
  v45: bool = id v40;
  v46: bool = id v9;
  v47: int = id v10;
  v48: int = id v11;
  jmp .__58__;
.__19__:
  v20: bool = const true;
  v25: bool = id v20;
  v26: bool = id v20;
  v27: int = id v10;
  v28: int = id v11;
  jmp .__64__;
.__71__:
}
